// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/ActivityFeed/version/CollapsedVersion should correctly render for multiple collaborators 1`] = `
<div
  className="bcs-collapsed-version"
>
  <span
    className="bcs-version-message"
  >
    <FormattedMessage
      defaultMessage="{numberOfCollaborators} collaborators uploaded versions {versions}"
      id="be.versionMultipleUsersUploaded"
      values={
        Object {
          "numberOfCollaborators": 2,
          "versions": <span
            className="bcs-version-range"
          >
            1
             - 
            10
          </span>,
        }
      }
    />
  </span>
</div>
`;

exports[`components/ContentSidebar/ActivityFeed/version/CollapsedVersion should correctly render for multiple collaborators 2`] = `
<span
  className="bcs-version-range"
>
  1
   - 
  10
</span>
`;

exports[`components/ContentSidebar/ActivityFeed/version/CollapsedVersion should correctly render for single collaborator 1`] = `
<div
  className="bcs-collapsed-version"
>
  <span
    className="bcs-version-message"
  >
    <FormattedMessage
      defaultMessage="{name} uploaded versions {versions}"
      id="be.versionUploadCollapsed"
      values={
        Object {
          "name": <strong>
            Person one
          </strong>,
          "versions": <span
            className="bcs-version-range"
          >
            1
             - 
            10
          </span>,
        }
      }
    />
  </span>
</div>
`;

exports[`components/ContentSidebar/ActivityFeed/version/CollapsedVersion should correctly render for single collaborator 2`] = `
<span
  className="bcs-version-range"
>
  1
   - 
  10
</span>
`;
